# 3c-milling-simulator

./: .gitmodules  CMakeLists.txt
res/gcode/: 1.k16  MOVE_ORIGIN_cc.k01  MOVE_ORIGIN_podpis.k01
res/gcode/ryba/: 1.k16  2.f10  3.f10  4.k08  6.k01  7.k01
res/gcode/ryba/final/: 1.k16  2.f10  3.k08  4.k01
res/gcode/ryba/old/: 2.f10  4.k08  5.k08  8.k01
res/gcode/ryba/oldold/: 3.f10  6.k08  7.k01  8.k01  Lines.txt  fin.k08
res/masks/: body3.xcf  wing2.xcf  wing5.xcf  wing6.xcf  wing7.xcf
res/models/: fish_final10.json  fish_final11.json  fish_final12.json  fish_final13.json  fish_final14.json  fish_final3.json  fish_final4.json  fish_final5.json  fish_final6.json  fish_final7.json  fish_final8.json  fish_final9.json  planeXZ.json
res/models/outlines/: bodyWings.json  body_fin.json  body_fin_top.json  body_outline.json  body_tail.json  bottom_fin_outline.json  butt_outline.json  butt_tail.json  eye_outline.json  fin_outline.json  inside_outline.json  nose_outline.json  old_wings_outline.json  tail_outline.json  test.json  wings_outline.json
res/shaders/millingBase/: millingBase.frag  millingBase.geom  millingBase.vert
res/shaders/patch/: patch.tese  patchC2.tese
res/shaders/phong/: phong.frag
res/shaders/quadPatch/: patch.frag  patch.tese  patchC2.tese
src/: main.cpp
src/app/: AppContext.h  Scene.cpp
src/app/algorithm/: Bresenham.cpp  Bresenham.h  Bresenham3D.cpp  Bresenham3D.h
src/app/entity/light/: PointLight.h
src/app/entity/mill/: MillModel.cpp  MillModel.h
src/app/entity/patchC0/: PatchC0.h
src/app/entity/patchC2/: PatchC2.h
src/app/entity/point/: Point.h
src/app/gcode/: GCodeExporter.cpp  GCodeExporter.h  GCodeParser.cpp  GCodeParser.h
src/app/heightmap/: HeightMap.cpp  HeightMap.h
src/app/intersection/: ParametricSurface.h  SurfaceIntersection.h
src/app/intersectionMask/: IntersectionMask.cpp  IntersectionMask.h
src/app/mill/: Mill.cpp  Mill.h  MillType.h
src/app/model/serializer/: Serializer.cpp  Serializer.h
src/app/path/: PathGenerator.cpp  PathGenerator.h
src/interface/camera/: BaseCamera.h  CameraAnchor.cpp  TopDownCamera.h
src/interface/gui/: Gui.cpp  Gui.h
src/opengl/framebuffer/: FrameBufferManager.cpp  FrameBufferManager.h
src/opengl/mesh/: EmptyVertex.h  Mesh.h  PosNorTexVertex.h  PositionNormalVertex.h  PositionVertex.h
src/opengl/shader/: Shader.h
src/opengl/texture/: Texture.cpp  Texture.h
